--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -307,6 +307,42 @@ symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200
 #: Stop blinking cursor after the specified number of seconds of
 #: keyboard inactivity. Set to zero to never stop blinking.
 
+# cursor_trail 0
+
+#: Set this to a value larger than zero to enable a "cursor trail"
+#: animation. This is an animation that shows a "trail" following the
+#: movement of the text cursor. It makes it easy to follow large
+#: cursor jumps and makes for a cool visual effect of the cursor
+#: zooming around the screen. The actual value of this option controls
+#: when the animation is triggered. It is a number of milliseconds.
+#: The trail animation only follows cursors that have stayed in their
+#: position for longer than the specified number of milliseconds. This
+#: prevents trails from appearing for cursors that rapidly change
+#: their positions during UI updates in complex applications. See
+#: cursor_trail_decay to control the animation speed and
+#: cursor_trail_start_threshold to control when a cursor trail is
+#: started.
+
+# cursor_trail_decay 0.1 0.4
+
+#: Controls the decay times for the cursor trail effect when the
+#: cursor_trail is enabled. This option accepts two positive float
+#: values specifying the fastest and slowest decay times in seconds.
+#: The first value corresponds to the fastest decay time (minimum),
+#: and the second value corresponds to the slowest decay time
+#: (maximum). The second value must be equal to or greater than the
+#: first value. Smaller values result in a faster decay of the cursor
+#: trail. Adjust these values to control how quickly the cursor trail
+#: fades away.
+
+# cursor_trail_start_threshold 2
+
+#: Set the distance threshold for starting the cursor trail. This
+#: option accepts a positive integer value that represents the minimum
+#: number of cells the cursor must move before the trail is started.
+#: When the cursor moves less than this threshold, the trail is
+#: skipped, reducing unnecessary cursor trail animation.
+
 #: {{ "}}}" }}
 
 #: Scrollback {{ "{{{" }}
@@ -445,9 +481,11 @@ scrollback_pager_history_size 100
 #: Control how hyperlinks are underlined. They can either be
 #: underlined on mouse hover, always (i.e. permanently underlined) or
 #: never which means that kitty will not apply any underline styling
-#: to hyperlinks. Uses the url_style and url_color settings for the
-#: underline style. Note that reloading the config and changing this
-#: value to/from always will only affect text subsequently received by
+#: to hyperlinks. Note that the value of always only applies to real
+#: (OSC 8) hyperlinks not text that is detected to be a URL on mouse
+#: hover. Uses the url_style and url_color settings for the underline
+#: style. Note that reloading the config and changing this value
+#: to/from always will only affect text subsequently received by
 #: kitty.
 
 # copy_on_select no
@@ -950,8 +988,8 @@ enable_audio_bell no
 
 #: The percentage (0-100] of the window size to which the logo should
 #: scale. Using a single number means the logo is scaled to that
-#: percentage of the shortest window dimension, while preseving aspect
-#: ratio of the logo image.
+#: percentage of the shortest window dimension, while preserving
+#: aspect ratio of the logo image.
 
 #: Using two numbers means the width and height of the logo are scaled
 #: to the respective percentage of the window's width and height.
@@ -1099,7 +1137,7 @@ tab_bar_style powerline
 #: The maximum number of cells that can be used to render the text in
 #: a tab. A value of zero means that no limit is applied.
 
-# tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
+# tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{tab.last_focused_progress_percent}{title}"
 
 #: A template to render the tab title. The default just renders the
 #: title with optional symbols for bell and activity. If you wish to
@@ -1120,16 +1158,22 @@ tab_bar_style powerline
 #:     The number of window groups (a window group is a window and all of its overlay windows) in the tab.
 #: tab.active_wd
 #:     The working directory of the currently active window in the tab
-#:     (expensive, requires syscall). Use active_oldest_wd to get
+#:     (expensive, requires syscall). Use tab.active_oldest_wd to get
 #:     the directory of the oldest foreground process rather than the newest.
 #: tab.active_exe
 #:     The name of the executable running in the foreground of the currently
 #:     active window in the tab (expensive, requires syscall). Use
-#:     active_oldest_exe for the oldest foreground process.
+#:     tab.active_oldest_exe for the oldest foreground process.
 #: max_title_length
 #:     The maximum title length available.
 #: keyboard_mode
 #:     The name of the current keyboard mode <https://sw.kovidgoyal.net/kitty/mapping/#modal-mappings> or the empty string if no keyboard mode is active.
+#: tab.last_focused_progress_percent
+#:     If a command running in a window reports the progress for a task, show this progress as a percentage
+#:     from the most recently focused window in the tab. Empty string if no progress is reported.
+#: tab.progress_percent
+#:     If a command running in a window reports the progress for a task, show this progress as a percentage
+#:     from all windows in the tab, averaged. Empty string is no progress is reported.
 
 #: Note that formatting is done by Python's string formatting
 #: machinery, so you can use, for instance, {layout_name[:2].upper()}
@@ -1139,9 +1183,10 @@ tab_bar_style powerline
 #: `{fmt.fg.red}red{fmt.fg.tab}normal{fmt.bg._00FF00}greenbg{fmt.bg.tab}`.
 #: Similarly, for bold and italic:
 #: `{fmt.bold}bold{fmt.nobold}normal{fmt.italic}italic{fmt.noitalic}`.
-#: Note that for backward compatibility, if {bell_symbol} or
-#: {activity_symbol} are not present in the template, they are
-#: prepended to it.
+#: The 256 eight terminal colors can be used as `fmt.fg.color0`
+#: through `fmt.fg.color255`. Note that for backward compatibility, if
+#: {bell_symbol} or {activity_symbol} are not present in the template,
+#: they are prepended to it.
 
 # active_tab_title_template none
 
@@ -1192,11 +1237,11 @@ tab_bar_style powerline
 #: background color in your kitty config and not use a background
 #: color in the editor color scheme. Or use the escape codes to set
 #: the terminals default colors in a shell script to launch your
-#: editor. See also second_transparent_bg. Be aware that using a value
-#: less than 1.0 is a (possibly significant) performance hit. When
-#: using a low value for this setting, it is desirable that you set
-#: the background color to a color the matches the general color of
-#: the desktop background, for best text rendering.  If you want to
+#: editor. See also transparent_background_colors. Be aware that using
+#: a value less than 1.0 is a (possibly significant) performance hit.
+#: When using a low value for this setting, it is desirable that you
+#: set the background color to a color the matches the general color
+#: of the desktop background, for best text rendering.  If you want to
 #: dynamically change transparency of windows, set
 #: dynamic_background_opacity to yes (this is off by default as it has
 #: a performance cost). Changing this option when reloading the config
@@ -1232,16 +1277,24 @@ tab_bar_style powerline
 #: When background image is scaled, whether linear interpolation
 #: should be used.
 
-# second_transparent_bg none
+# transparent_background_colors
 
-#: When the background color matches this color, background_opacity is
-#: applied to it to render it as semi-transparent, just as for colors
-#: matching the main background color. Useful in more complex UIs like
-#: editors where you could want more than a single background color to
-#: be rendered as transparent, for instance, for a cursor highlight
-#: line background. Terminal applications can set this color using The
-#: kitty color control <https://sw.kovidgoyal.net/kitty/color-
-#: stack/#color-control> escape code.
+#: A space separated list of upto 7 colors, with opacity. When the
+#: background color of a cell matches one of these colors, it is
+#: rendered semi-transparent using the specified opacity.
+
+#: Useful in more complex UIs like editors where you could want more
+#: than a single background color to be rendered as transparent, for
+#: instance, for a cursor highlight line background or a highlighted
+#: block. Terminal applications can set this color using The kitty
+#: color control <https://sw.kovidgoyal.net/kitty/color-stack/#color-
+#: control> escape code.
+
+#: The syntax for specifying colors is: color@opacity, where the
+#: @opacity part is optional. When unspecified, the value of
+#: background_opacity is used. For example::
+
+#:     transparent_background_colors red@0.5 #00ff00@0.3
 
 # dynamic_background_opacity no
 
@@ -1496,7 +1549,7 @@ close_on_child_death yes
 
 #:     filter_notification title:hello or body:"abc.*def"
 #:     # filter out notification from vim except for ones about updates, (?i)
-#:     # makes matching case insesitive.
+#:     # makes matching case insensitive.
 #:     filter_notification app:"[ng]?vim" and not body:"(?i)update"
 #:     # filter out all notifications
 #:     filter_notification all
@@ -1672,7 +1725,13 @@ notify_on_cmd_finish invisible 30.0
 #: values are:
 
 #: notify
-#:     Send a desktop notification.
+#:     Send a desktop notification. The subsequent arguments are optional and specify when
+#:     the notification is automatically cleared. The set of possible events when the notification is
+#:     cleared are: focus and next. focus means that when the notification
+#:     policy is unfocused or invisible the notification is automatically cleared
+#:     when the window regains focus. The value of next means that the previous notification
+#:     is cleared when the next notification is shown. The default when no arguments are specified
+#:     is: focus next.
 
 #: bell
 #:     Ring the terminal bell.
@@ -1691,6 +1750,8 @@ notify_on_cmd_finish invisible 30.0
 #:     # Run 'notify-send' when a command takes more than 10 seconds in a invisible window
 #:     # Here %c is replaced by the current command line and %s by the job exit code
 #:     notify_on_cmd_finish invisible 10.0 command notify-send "job finished with status: %s" %c
+#:     # Do not clear previous notification when next command finishes or window regains focus
+#:     notify_on_cmd_finish invisible 5.0 notify
 
 # term xterm-kitty
 
@@ -1718,13 +1779,14 @@ notify_on_cmd_finish invisible 30.0
 
 # forward_stdio no
 
-#: Forward STDOUT and STDERR of the kitty process to child processes
-#: as file descriptors 3 and 4. This is useful for debugging as it
-#: allows child processes to print to kitty's STDOUT directly. For
-#: example, echo hello world >&3 in a shell will print to the parent
-#: kitty's STDOUT. When enabled, this also sets the
-#: KITTY_STDIO_FORWARDED=3 environment variable so child processes
-#: know about the forwarding.
+#: Forward STDOUT and STDERR of the kitty process to child processes.
+#: This is useful for debugging as it allows child processes to print
+#: to kitty's STDOUT directly. For example, echo hello world
+#: >&$KITTY_STDIO_FORWARDED in a shell will print to the parent
+#: kitty's STDOUT. Sets the KITTY_STDIO_FORWARDED=fdnum environment
+#: variable so child processes know about the forwarding. Note that on
+#: macOS this prevents the shell from being run via the login utility
+#: so getlogin() will not work in programs run in this session.
 
 # menu_map
 
@@ -2254,7 +2316,10 @@ map kitty_mod+f2 new_tab_with_cwd
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
 #: the first tab, 2 the second tab and -1 being the previously active
-#: tab, and any number larger than the last tab being the last tab::
+#: tab, -2 being the tab active before the previously active tab and
+#: so on. Any number larger than the number of tabs goes to the last
+#: tab and any number less than the number of previously used tabs in
+#: the history goes to the oldest previously used tab in the history::
 
 #:     map ctrl+alt+1 goto_tab 1
 #:     map ctrl+alt+2 goto_tab 2
@@ -2509,9 +2574,17 @@ map kitty_mod+f2 new_tab_with_cwd
 #::  to the shell rc files, but only clears up to the prompt, it does
 #::  not clear anytext at the prompt itself.
 
-#: Clear up to cursor line
+#: Clear to start
 
 # map cmd+k clear_terminal to_cursor active
+
+#: Clear scrollback
+
+# map option+cmd+k clear_terminal scrollback active
+
+#: Clear screen
+
+# map cmd+ctrl+l clear_terminal to_cursor_scroll active
 
 #: Reload kitty.conf
 
