--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -327,12 +327,16 @@ symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200
 #: the CSS easing functions <https://developer.mozilla.org/en-
 #: US/docs/Web/CSS/easing-function>. Note that turning on animations
 #: uses extra power as it means the screen is redrawn multiple times
-#: per blink interval. See also, cursor_stop_blinking_after.
+#: per blink interval. See also, cursor_stop_blinking_after. This
+#: setting also controls blinking text, which blinks in exact rhythm
+#: with the cursor.
 
 # cursor_stop_blinking_after 15.0
 
 #: Stop blinking cursor after the specified number of seconds of
-#: keyboard inactivity. Set to zero to never stop blinking.
+#: keyboard inactivity. Set to zero to never stop blinking. This
+#: setting also controls blinking text, which blinks in exact rhythm
+#: with the cursor.
 
 # cursor_trail 0
 
@@ -370,6 +374,15 @@ symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200
 #: When the cursor moves less than this threshold, the trail is
 #: skipped, reducing unnecessary cursor trail animation.
 
+# cursor_trail_color none
+
+#: Set the color of the cursor trail when cursor_trail is enabled. If
+#: set to 'none' (the default), the cursor trail will use the cursor's
+#: background color. Otherwise, specify a color value (e.g., #ff0000
+#: for red, or a named color like 'red'). This allows you to customize
+#: the appearance of the cursor trail independently of the cursor
+#: color.
+
 #: {{ "}}}" }}
 
 #: Scrollback {{ "{{{" }}
@@ -385,13 +398,93 @@ scrollback_lines 5000
 #: is changed it will only affect newly created windows, not existing
 #: ones.
 
-# scrollback_indicator_opacity 1.0
+# scrollbar scrolled
 
-#: The opacity of the scrollback indicator which is a small colored
-#: rectangle that moves along the right hand side of the window as you
-#: scroll, indicating what fraction you have scrolled. The default is
-#: one which means fully opaque, aka visible. Set to a value between
-#: zero and one to make the indicator less visible.
+#: Control when the scrollbar is displayed.
+
+#: scrolled
+#:     means when the scrolling backwards has started.
+#: hovered
+#:     means when the mouse is hovering on the right edge of the window.
+#: scrolled-and-hovered
+#:     means when the mouse is over the scrollbar region *and* scrolling backwards has started.
+#: always
+#:     means whenever any scrollback is present
+#: never
+#:     means disable the scrollbar.
+
+# scrollbar_interactive yes
+
+#: If disabled, the scrollbar will not be controllable via th emouse
+#: and all mouse events will pass through the scrollbar.
+
+# scrollbar_jump_on_click yes
+
+#: When enabled clicking in the scrollbar track will cause the scroll
+#: position to jump to the clicked location, otherwise the scroll
+#: position will only move towards the position by a single screenful,
+#: which is how traditional scrollbars behave.
+
+# scrollbar_width 0.5
+
+#: The width of the scroll bar in units of cell width.
+
+# scrollbar_hover_width 1
+
+#: The width of the scroll bar when the mouse is hovering over it, in
+#: units of cell width.
+
+# scrollbar_handle_opacity 0.5
+
+#: The opacity of the scrollbar handle, 0 being fully transparent and
+#: 1 being full opaque.
+
+# scrollbar_radius 0.3
+
+#: The radius (curvature) of the scrollbar handle in units of cell
+#: width. Should be less than scrollbar_width.
+
+# scrollbar_gap 0.1
+
+#: The gap between the scrollbar and the window edge in units of cell
+#: width.
+
+# scrollbar_min_handle_height 1
+
+#: The minimum height of the scrollbar handle in units of cell height.
+#: Prevents the handle from becoming too small when there is a lot of
+#: scrollback.
+
+# scrollbar_hitbox_expansion 0.25
+
+#: The extra area around the handle to allow easier grabbing of the
+#: scollbar in units of cell width.
+
+# scrollbar_track_opacity 0
+
+#: The opacity of the scrollbar track, 0 being fully transparent and 1
+#: being full opaque.
+
+# scrollbar_track_hover_opacity 0.1
+
+#: The opacity of the scrollbar track when the mouse is over the
+#: scrollbar, 0 being fully transparent and 1 being full opaque.
+
+# scrollbar_handle_color foreground
+
+#: The color of the scrollbar handle. A value of foreground means to
+#: use the current foreground text color, a value of
+#: selection_background means to use the current selection background
+#: color. Also, you can use an arbitrary color, such as #12af59 or
+#: red.
+
+# scrollbar_track_color foreground
+
+#: The color of the scrollbar track. A value of foreground means to
+#: use the current foreground text color, a value of
+#: selection_background means to use the current selection background
+#: color. Also, you can use an arbitrary color, such as #12af59 or
+#: red.
 
 # scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 
@@ -404,6 +497,16 @@ scrollback_lines 5000
 #: CURSOR_COLUMN will be replaced by the current cursor position or
 #: set to 0 if there is no cursor, for example, when showing the last
 #: command output.
+
+#: If you would rather use neovim to view the scrollback, use
+#: something like this::
+
+#:     scrollback_pager nvim --cmd 'set eventignore=FileType' +'nnoremap q ZQ' +'call nvim_open_term(0, {})' +'set nomodified nolist' +'$' -
+
+#: The above works for neovim 0.12 and newer. There is also a
+#: dedicated plugin kitty-scrollback.nvim
+#: <https://github.com/mikesmithgh/kitty-scrollback.nvim> you can use
+#: with more features that works with older neovim as well.
 
 scrollback_pager_history_size 100
 
@@ -986,6 +1089,18 @@ enable_audio_bell no
 #: that setting a non-zero window_margin_width overrides this and
 #: causes all borders to be drawn.
 
+# draw_window_borders_for_single_window no
+
+#: Draw borders around a window even when there is only a single
+#: window visible. When enabled and there is only a single window,
+#: full borders are drawn around it (as if draw_minimal_borders is
+#: false). The border will show in the active color when the window is
+#: focused and the OS window has focus, and in the inactive color when
+#: the OS window loses focus. This provides a clear visual indicator
+#: of whether the kitty window is focused. When there are multiple
+#: windows visible, this option has no effect and normal border
+#: drawing rules apply.
+
 # window_margin_width 0
 
 #: The window margin (in pts) (blank area outside the border). A
@@ -1184,6 +1299,21 @@ tab_bar_style powerline
 #:     a mapping for the select_tab action which presents you with a list of
 #:     tabs and allows for easy switching to a tab.
 
+# tab_bar_filter
+
+#: A search expression <https://sw.kovidgoyal.net/kitty/remote-
+#: control/#search-syntax>. Only tabs that match this expression will
+#: be shown in the tab bar. The currently active tab is always shown,
+#: regardless of whether it matches or not. When using this option,
+#: the tab bar may be displayed with less tabs than specified in
+#: tab_bar_min_tabs, as evaluating the filter is expensive and is done
+#: only at display time. This is most useful when using sessions
+#: <https://sw.kovidgoyal.net/kitty/sessions/>. An expression of
+#: session:~ or session:^$ will show only tabs that belong to the
+#: current session or no session. The various tab navigation actions
+#: such as goto_tab, next_tab, previous_tab, etc. are automatically
+#: restricted to work only on matching tabs.
+
 # tab_bar_align left
 
 #: The horizontal alignment of the tab bar, can be one of: left,
@@ -1249,6 +1379,10 @@ tab_bar_style powerline
 #:     The tab index usable with goto_tab N goto_tab shortcuts.
 #: layout_name
 #:     The current layout name.
+#: session_name
+#:     The name of the kitty session file from which this tab was created, if any.
+#: active_session_name
+#:     The name of the kitty session file from which the active window in this tab was created, if any.
 #: num_windows
 #:     The number of windows in the tab.
 #: num_window_groups
@@ -1271,6 +1405,14 @@ tab_bar_style powerline
 #: tab.progress_percent
 #:     If a command running in a window reports the progress for a task, show this progress as a percentage
 #:     from all windows in the tab, averaged. Empty string is no progress is reported.
+#: custom
+#:     This will call a function named draw_title(data) from the file tab_bar.py placed in
+#:     the kitty config directory. The function will be passed a dictionary of data, the same data that
+#:     can be used in this template. It can then perform arbitrarily complex processing and return a string.
+#:     For example: tab_title_template "{custom}" will use the output of the function as the tab title.
+#:     Any print statements in the draw_title() will print to the STDOUT of the kitty process, useful
+#:     for debugging.
+
 
 #: Note that formatting is done by Python's string formatting
 #: machinery, so you can use, for instance, {layout_name[:2].upper()}
@@ -1338,12 +1480,7 @@ tab_bar_style powerline
 #: a value less than 1.0 is a (possibly significant) performance hit.
 #: When using a low value for this setting, it is desirable that you
 #: set the background color to a color the matches the general color
-#: of the desktop background, for best text rendering. Note that to
-#: workaround window managers not doing gamma-corrected blending kitty
-#: makes background_opacity non-linear which means, especially for
-#: light backgrounds you might need to make the value much lower than
-#: you expect to get good results, see 6218
-#: <https://github.com/kovidgoyal/kitty/issues/6218> for details.
+#: of the desktop background, for best text rendering.
 
 #: If you want to dynamically change transparency of windows, set
 #: dynamic_background_opacity to yes (this is off by default as it has
@@ -1657,6 +1794,17 @@ close_on_child_death yes
 
 #: The value of VAR2 will be <path to home directory>/a/b.
 
+#: Use the special value read_from_shell to have kitty read the
+#: specified variables from your login shell shell configuration.
+#: Useful if your shell startup files setup a bunch of environment
+#: variables that you want available to kitty and in kitty session
+#: files. Each variable name is treated as a glob pattern to match.
+#: For example: env read_from_shell=PATH LANG LC_* XDG_* EDITOR
+#: VISUAL. Note that these variables are only read after the
+#: configuration is fully processed, thus they are not available for
+#: recursive expansion and they will override any variables set by
+#: other env directives.
+
 # filter_notification
 
 #: Specify rules to filter out notifications sent by applications
@@ -1726,7 +1874,7 @@ update_check_interval 0
 #: Path to a session file to use for all kitty instances. Can be
 #: overridden by using the kitty --session =none command line option
 #: for individual instances. See sessions
-#: <https://sw.kovidgoyal.net/kitty/overview/#sessions> in the kitty
+#: <https://sw.kovidgoyal.net/kitty/sessions/> in the kitty
 #: documentation for details. Note that relative paths are interpreted
 #: with respect to the kitty config directory. Environment variables
 #: in the path are expanded. Changing this option by reloading the
@@ -1857,6 +2005,10 @@ notify_on_cmd_finish invisible 30.0
 #: bell
 #:     Ring the terminal bell.
 
+#: notify-bell
+#:     Send a desktop notification and ring the terminal bell.
+#:     The arguments are the same as for `notify`.
+
 #: command
 #:     Run a custom command. All subsequent arguments are the cmdline to run.
 
@@ -1938,13 +2090,7 @@ wayland_titlebar_color background
 #: system means to use the default system color, light or dark can
 #: also be used to set it explicitly. A value of background means to
 #: use the background color of the currently active window and finally
-#: you can use an arbitrary color, such as #12af59 or red. WARNING:
-#: This option works by using a hack when arbitrary color (or
-#: background) is configured, as there is no proper Cocoa API for it.
-#: It sets the background color of the entire window and makes the
-#: titlebar transparent. As such it is incompatible with
-#: background_opacity. If you want to use both, you are probably
-#: better off just hiding the titlebar with hide_window_decorations.
+#: you can use an arbitrary color, such as #12af59 or red.
 
 # macos_option_as_alt no
 
@@ -2117,13 +2263,19 @@ wayland_titlebar_color background
 #: Copy to clipboard
 
 # map kitty_mod+c copy_to_clipboard
-# map cmd+c       copy_to_clipboard
 
 #::  There is also a copy_or_interrupt action that can be optionally
 #::  mapped to Ctrl+C. It will copy only if there is a selection and
 #::  send an interrupt otherwise. Similarly,
 #::  copy_and_clear_or_interrupt will copy and clear the selection or
-#::  send an interrupt if there is no selection.
+#::  send an interrupt if there is no selection. The copy_or_noop
+#::  action will copy if there is a selection and pass the key through
+#::  to the application running in the terminal if there is no
+#::  selection.
+
+#: Copy to clipboard or pass through
+
+# map cmd+c copy_or_noop
 
 #: Paste from clipboard
 
@@ -2610,6 +2762,10 @@ map kitty_mod+f2 new_tab_with_cwd
 
 # map opt+cmd+s toggle_macos_secure_keyboard_entry
 
+#: macOS Cycle through OS Windows
+
+# map cmd+` macos_cycle_through_os_windows
+
 #: Unicode input
 
 # map kitty_mod+u    kitten unicode_input
@@ -2663,6 +2819,8 @@ map kitty_mod+f2 new_tab_with_cwd
 #::      map f1 clear_terminal to_cursor active
 #::      # Same as above except cleared lines are moved into scrollback
 #::      map f1 clear_terminal to_cursor_scroll active
+#::      # Erase the last command and its output (needs shell integration to work)
+#::      map f1 clear_terminal last_command active
 
 #::  If you want to operate on all kitty windows instead of just the
 #::  current one, use all instead of active.
@@ -2711,6 +2869,10 @@ map kitty_mod+f2 new_tab_with_cwd
 #: Clear scrollback
 
 # map option+cmd+k clear_terminal scrollback active
+
+#: Clear the last command
+
+# map cmd+l clear_terminal last_command active
 
 #: Clear screen
 
