--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -1464,23 +1464,27 @@ tab_bar_style powerline
 
 # background_opacity 1.0
 
-#: The opacity of the background. A number between zero and one, where
-#: one is opaque and zero is fully transparent. This will only work if
-#: supported by the OS (for instance, when using a compositor under
-#: X11). Note that it only sets the background color's opacity in
-#: cells that have the same background color as the default terminal
-#: background, so that things like the status bar in vim, powerline
-#: prompts, etc. still look good. But it means that if you use a color
-#: theme with a background color in your editor, it will not be
-#: rendered as transparent. Instead you should change the default
-#: background color in your kitty config and not use a background
-#: color in the editor color scheme. Or use the escape codes to set
-#: the terminals default colors in a shell script to launch your
-#: editor. See also transparent_background_colors. Be aware that using
-#: a value less than 1.0 is a (possibly significant) performance hit.
-#: When using a low value for this setting, it is desirable that you
-#: set the background color to a color the matches the general color
-#: of the desktop background, for best text rendering.
+#: The opacity of the terminal background color. A number between zero
+#: and one, where one is opaque and zero is fully transparent. This
+#: will only work if supported by the OS (for instance, when using a
+#: compositor under X11). Note that it only sets the background
+#: color's opacity in cells that have the same background color as the
+#: default terminal background, so that things like the status bar in
+#: vim, powerline prompts, etc. still look good. But it means that if
+#: you use a color theme with a background color in your editor, it
+#: will not be rendered as transparent. Instead you should change the
+#: default background color in your kitty config and not use a
+#: background color in the editor color scheme. Or use the escape
+#: codes to set the terminals default colors in a shell script to
+#: launch your editor. See also transparent_background_colors. Be
+#: aware that using a value less than 1.0 is a (possibly significant)
+#: performance hit. When using a low value for this setting, it is
+#: desirable that you set the background color to a color the matches
+#: the general color of the desktop background, for best text
+#: rendering. Note also, that this setting does not apply to the
+#: background_image, if any. The background image can itself have
+#: transparency via its alpha channel if desired, and that will be
+#: respected.
 
 #: If you want to dynamically change transparency of windows, set
 #: dynamic_background_opacity to yes (this is off by default as it has
@@ -1518,6 +1522,9 @@ tab_bar_style powerline
 #: background_opacity is used. For example::
 
 #:     transparent_background_colors red@0.5 #00ff00@0.3
+
+#: Note that you must also set background_opacity to something less
+#: than 1 for this setting to work properly.
 
 # dynamic_background_opacity no
 
@@ -1558,8 +1565,7 @@ tab_bar_style powerline
 #: How much to tint the background image by the background color. This
 #: option makes it easier to read the text. Tinting is done using the
 #: current background color for each window. This option applies only
-#: if background_opacity is set and transparent windows are supported
-#: or background_image is set. Note that when using auto_color_scheme
+#: if background_image is set. Note that when using auto_color_scheme
 #: <https://sw.kovidgoyal.net/kitty/kittens/themes/#auto-color-scheme>
 #: this option is overridden by the color scheme file and must be set
 #: inside it to take effect.
@@ -2396,6 +2402,22 @@ wayland_titlebar_color background
 #::  Requires shell integration
 #::  <https://sw.kovidgoyal.net/kitty/shell-integration/> to work.
 
+#: Search the scrollback within a pager
+
+# map kitty_mod+/ search_scrollback
+# map cmd+f       search_scrollback
+
+#::  Search for currently selected text in the scrollback using the
+#::  configured scrollback_pager. Assumes that pressing the / key
+#::  triggers search mode in the pager. If you want to create a manual
+#::  mapping with a special pager for this, you can use something
+#::  like:
+
+#::      map f1 combine : launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay mypager : send_key /
+
+#::  For more sophisticated control, such as using the current
+#::  selection, use remote_control_script.
+
 #: {{ "}}}" }}
 
 #: Window management {{ "{{{" }}
@@ -2702,6 +2724,22 @@ map kitty_mod+f2 new_tab_with_cwd
 
 #::  Select a path/filename and open it with the default open program.
 
+#: Insert chosen file
+
+# map kitty_mod+p>c kitten choose-files
+
+#::  Select a file using the choose-files
+#::  <https://sw.kovidgoyal.net/kitty/kittens/choose-files/> kitten
+#::  and insert it into the terminal.
+
+#: Insert chosen directory
+
+# map kitty_mod+p>d kitten choose-files --mode=dir
+
+#::  Select a directory using the choose-files
+#::  <https://sw.kovidgoyal.net/kitty/kittens/choose-files/> kitten
+#::  and insert it into the terminal.
+
 #: Insert selected line
 
 # map kitty_mod+p>l kitten hints --type line --program -
@@ -2765,6 +2803,10 @@ map kitty_mod+f2 new_tab_with_cwd
 #: macOS Cycle through OS Windows
 
 # map cmd+` macos_cycle_through_os_windows
+
+#: macOS Cycle through OS Windows backwards
+
+# map cmd+shift+` macos_cycle_through_os_windows_backwards
 
 #: Unicode input
 
